<resources>
    <string name="app_name">GYMFinder</string>
    <string name="title_home">Home</string>
    <string name="title_finder">Find</string>
    <string name="title_chat">Chat</string>
    <string name="title_training">Training</string>
    <string name="title_training_fast_start">Быстрый старт</string>
    <string name="title_profile">Profile</string>
    <string name="nickname">Имя пользователя</string>
    <string name="friends">Друзья</string>
    <string name="trainings">Тренировки</string>
    <string name="duration">Время</string>
    <string name="volume">Объём</string>
    <string name="set">Подходы</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="end">Закончить тренировку</string>

    <string name="home">Главная</string>
    <string name="choice">Выбор упражнения</string>

    <string name="repeats">Повторения</string>
    <string name="weight">Вес</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Войти</string>
    <string name="sgn_in">Вход</string>
    <string name="sgn_out">Выход</string>
    <string name="create_account">Регистрация</string>
    <string name="also_sign_in">ВХОД</string>
    <string name="also_reg_in">РЕГИСТРАЦИЯ</string>
    <string name="zero_value">0</string>
    <string name="hint_alert_dialog">https://www.google.com/</string>
</resources>