<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gymfinder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="com.example.gymfinder.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.gymfinder.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_finder"
        android:name="com.example.gymfinder.ui.finder.FinderFragment"
        android:label="@string/title_finder"
        tools:layout="@layout/fragment_finder" />
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.gymfinder.ui.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" />
</navigation>