<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.currentTraining.CurrentTrainingFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_duration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card_volume"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/name_duration"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="11sp"
            android:text="@string/duration"
            />
        <TextView
            android:id="@+id/duration"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            tools:text="10"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_volume"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_duration"
        app:layout_constraintEnd_toStartOf="@id/card_set_count"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/name_volume"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="11sp"
            android:text="@string/volume"
            />
        <EditText
            android:inputType="number"
            android:id="@+id/volume"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            tools:text="10"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_set_count"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/card_volume"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/name_set"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="11sp"
            android:text="@string/set"
            />
        <EditText
            android:inputType="number"
            android:id="@+id/count_of_trainings"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            tools:text="10"
            />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recExercises"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/card_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_exercise"
        />

    <Button
        android:id="@+id/new_exercise"
        android:background="@drawable/round_button"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/end_training"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/add_exercise"
        android:textStyle="bold|italic"
        />

    <Button
        android:id="@+id/end_training"
        android:background="@drawable/round_button"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/end"
        android:textStyle="bold|italic"
        />

</androidx.constraintlayout.widget.ConstraintLayout>