<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/round_button"
        android:text="@string/sgn_out"
        app:layout_constraintBottom_toTopOf="@+id/bios"
        app:layout_constraintStart_toEndOf="@+id/card_trainings_count_icon"
        app:layout_constraintTop_toBottomOf="@id/nickname" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        app:cardCornerRadius="90dp">
        <ImageView
            android:id="@+id/profile_icon"
            android:src="@drawable/avatar"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/card_profile_icon"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:id="@+id/card_friends_icon"
        app:layout_constraintStart_toEndOf="@id/card_profile_icon"
        app:layout_constraintTop_toBottomOf="@id/nickname"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/name_friends"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="11sp"
            android:text="@string/friends"
            />
        <TextView
            android:id="@+id/count_of_friends"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            tools:text="10"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_trainings_count_icon"
        app:layout_constraintStart_toEndOf="@id/card_friends_icon"
        app:layout_constraintTop_toBottomOf="@id/nickname"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp">
        <TextView
            android:id="@+id/name_trainings"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:textSize="11sp"
            android:text="@string/trainings"
            />
        <TextView
            android:id="@+id/count_of_trainings"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            tools:text="10"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_profile_icon"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/bios"
        android:text="Какая-то информация про человека"
        android:maxLines="2"
        android:ellipsize="end"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTraining"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bios" />

</androidx.constraintlayout.widget.ConstraintLayout>