<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    android:layout_margin="4dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exerciseTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_exercise_training_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="90dp">
            <ImageView
                android:id="@+id/profile_icon"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_exercise_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:hint="@string/sgn_out"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/card_exercise_training_icon"
            app:layout_constraintBottom_toTopOf="@id/group_exercise_training"
            />
        <TextView
            android:id="@+id/group_exercise_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/sgn_out"
            app:layout_constraintTop_toBottomOf="@id/name_exercise_training"
            app:layout_constraintStart_toEndOf="@id/card_exercise_training_icon"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/card_exercise_training_icon"
            >

            <EditText
                android:id="@+id/repeats"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeats"
                android:layout_marginStart="32dp"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:imeOptions="actionNone"
                android:layout_weight="1"
                android:layout_margin="12dp"
                />

            <EditText
                android:id="@+id/weight"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:imeOptions="actionNone"
                android:layout_weight="1"
                android:layout_margin="12dp"
                />

        </LinearLayout>



        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>