<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/training_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/SECONDARY_DARK_SCHEME"
    app:cardCornerRadius="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="90dp">
            <ImageView
                android:id="@+id/profile_icon"
                android:src="@drawable/avatar"
                android:scaleType="centerCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/card_profile_icon"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/card_profile_icon"
            app:layout_constraintTop_toBottomOf="@id/nickname" />
        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/card_profile_icon"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/TRETIARY_DARK_SCHEME"
            android:id="@+id/card_duration_icon"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp">
            <TextView
                android:textColor="@color/black"
                android:id="@+id/name_duration"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:textSize="11sp"
                android:text="@string/duration"
                />
            <TextView
                android:textColor="@color/black"
                android:id="@+id/duration"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                tools:text="10"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/TRETIARY_DARK_SCHEME"
            android:id="@+id/card_volume_icon"
            app:layout_constraintTop_toBottomOf="@id/info"
            app:layout_constraintStart_toEndOf="@id/card_duration_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="4dp">
            <TextView
                android:textColor="@color/black"
                android:id="@+id/name_volume"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:textSize="11sp"
                android:text="@string/volume"
                />
            <TextView
                android:textColor="@color/black"
                android:id="@+id/volume"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|bottom"
                tools:text="10"
                />
        </androidx.cardview.widget.CardView>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_volume_icon"
            android:background="@color/PRIMARY_DARK_SCHEME"
            android:src="@drawable/like"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>